--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "whatsapp-bot",
   "version": "1.0.0",
+  "description": "WhatsApp polling bot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "node-cron": "^4.2.1",
+    "express": "^4.21.2",
+    "mongoose": "^7.8.7",
+    "node-cron": "^3.0.2",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.32.0"
+    "whatsapp-web.js": "^1.32.0",
+    "wwebjs-mongo": "^1.1.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
