--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "whatsapp-bot",
   "version": "1.0.0",
-  "description": "WhatsApp polling bot",
+  "description": "WhatsApp polling bot with dashboard",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.21.2",
-    "mongoose": "^7.8.7",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.0",
     "node-cron": "^3.0.2",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
+    "socket.io": "^4.8.1",
     "whatsapp-web.js": "^1.32.0",
     "wwebjs-mongo": "^1.1.0"
   },
